Adds detection for UC Browser HD browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2943,3 +2943,11 @@
     version: 6.6.2
     engine: Webkit
     engine_version: ""
+-
+  user_agent: UCBrowserHD/3.0.1.776 CFNetwork/1121.2.2 Darwin/19.2.0
+  client:
+    type: browser
+    name: UC Browser HD
+    version: 3.0.1.776
+    engine: ""
+    engine_version: ""
