--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -915,6 +915,11 @@
   name: 'Obigo'
   version: ''
 
+# UC Browser HD
+- regex: 'UCBrowserHD/([\d\.]+)'
+  name: 'UC Browser HD'
+  version: '$1'
+
 #UC Browser Mini
 - regex: 'UCMini(?:[ /]?(\d+[\.\d]+))?'
   name: 'UC Browser Mini'
