--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2943,3 +2943,11 @@
     version: 6.6.2
     engine: Webkit
     engine_version: ""
+-
+  user_agent: QQBrowserLite/5385 CFNetwork/978.2 Darwin/18.7.0 (x86_64)
+  client:
+    type: browser
+    name: QQ Browser Lite
+    version: "5385"
+    engine: ""
+    engine_version: ""
