--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1179,7 +1179,7 @@
   version: '$1'
 
 # QQ Browser Lite
-- regex: 'M?QQBrowserLite/([\d\.]+)'
+- regex: 'QQBrowserLite/([\d\.]+)'
   name: 'QQ Browser Lite'
   version: '$1'
 
