--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -916,7 +916,7 @@
   version: ''
 
 # UC Browser HD
-- regex: 'UCBrowserHD/([\d\.]+)'
+- regex: 'UCBrowserHD/(\d[\d\.]+)'
   name: 'UC Browser HD'
   version: '$1'
 
