Improves detection for Maxthon browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2943,3 +2943,27 @@
     version: 6.6.2
     engine: Webkit
     engine_version: ""
+-
+  user_agent: MxBrowser-iPhone/405 CFNetwork/894 Darwin/17.4.0
+  client:
+    type: browser
+    name: Maxthon
+    version: "405"
+    engine: WebKit
+    engine_version: ""
+-
+  user_agent: MxBrowser-inhouse/4043 CFNetwork/897.15 Darwin/17.5.0
+  client:
+    type: browser
+    name: Maxthon
+    version: "4043"
+    engine: WebKit
+    engine_version: ""
+-
+  user_agent: Maxthon%20Browser/180507 CFNetwork/760.9 Darwin/15.6.0 (x86_64)
+  client:
+    type: browser
+    name: Maxthon
+    version: "180507"
+    engine: WebKit
+    engine_version: ""
