Adds detection for BSN Browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2959,3 +2959,11 @@
     version: "5385"
     engine: ""
     engine_version: ""
+-
+  user_agent: BSNBrowser/1001 CFNetwork/711.1.12 Darwin/14.0.0
+  client:
+    type: browser
+    name: BSN Browser
+    version: "1001"
+    engine: ""
+    engine_version: ""
