Adds detection for BSN Browser Lite

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# BSN Browser Lite
+- regex: 'BSNBrowserLite/(\d+[\.\d]+)'
+  name: 'BSN Browser Lite'
+  version: '$1'
+
 # BSN Browser
 - regex: 'BSNBrowser/(\d+[\.\d]+)'
   name: 'BSN Browser'
