feat(app) detect app: Naver
issue #6604

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -671,3 +671,19 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: NAVER/10.2.3.1 CFNetwork/976 Darwin/18.2.0
+  os:
+    name: iOS
+    version: "12.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Naver
+    version: 10.2.3.1
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
