Adds detection for Covenant Eyes browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,11 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Covenant Eyes (https://www.covenanteyes.com/)
+- regex: 'Covenant%20Eyes/(\d+[\.\d]+)'
+  name: 'Covenant Eyes'
+  version: '$1'
+
 # xStand (https://www.adnx.com/)
 - regex: 'xStand/(\d+[\.\d]+)'
   name: 'xStand'
