--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2983,3 +2983,11 @@
     version: "5385"
     engine: ""
     engine_version: ""
+-
+  user_agent: Covenant%20Eyes/5.3.8.0 CFNetwork/1121.2.2 Darwin/19.3.0
+  client:
+    type: browser
+    name: Covenant Eyes
+    version: 5.3.8.0
+    engine: ""
+    engine_version: ""
