Adds detection for Cocolyzebot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3945,3 +3945,12 @@
     producer:
       name: Pingdom AB
       url: https://www.pingdom.com
+-
+  user_agent: Mozilla/5.0 (compatible; Cocolyzebot/1.0; https://cocolyze.com/bot)
+  bot:
+    name: Cocolyzebot
+    category: Crawler
+    url: https://cocolyze.com/en/cocolyzebot
+    producer:
+        name: VSI INNOVATION SAS
+        url: https://vsi-innovation.com/
