Adds detection for VeryHip bot

--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2221,6 +2221,14 @@
     name: 'VSI INNOVATION SAS'
     url: 'https://vsi-innovation.com/'
 
+- regex: 'veryhip'
+  name: 'VeryHip'
+  category: 'Crawler'
+  url: 'https://veryhip.com/'
+  producer:
+    name: 'VeryHip'
+    url: 'https://veryhip.com/'
+    
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
