Adds detection for LinkpadBot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3963,3 +3963,12 @@
     producer:
       name: VeryHip
       url: https://veryhip.com/
+-
+  user_agent: Mozilla/5.0 (compatible; LinkpadBot/2.3; +http://linkpad.org/robot/)
+  bot:
+    name: LinkpadBot
+    category: Crawler
+    url: https://www.linkpad.org/
+    producer:
+      name: Solomono LLC
+      url: https://www.linkpad.org/
