feat(app) detect apps: Copied, Papers

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -687,3 +687,35 @@
     model: ""
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Papers/2.2.19 CFNetwork/902.3.1 Darwin/17.7.0 (x86_64)
+  os:
+    name: Mac
+    version: 10.13.6
+    platform: x64
+  client:
+    type: mobile app
+    name: Papers
+    version: 2.2.19
+  device:
+    type: desktop
+    brand: Apple
+    model: ""
+  os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: Copied/336 CFNetwork/893.13.1 Darwin/17.4.0 (x86_64)
+  os:
+    name: Mac
+    version: 10.13.3
+    platform: x64
+  client:
+    type: mobile app
+    name: Copied
+    version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: ""
+  os_family: Mac
+  browser_family: Unknown
