--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -281,6 +281,11 @@
   name: 'Naver'
   version: '$1'
 
-- regex: '(RoboForm|iFolder)/(\d+[\.\d]+) CFNetwork'
+# https://apps.apple.com/ru/app/copied/id1026349850
+- regex: 'Copied/(\d+[\.\d]+) CFNetwork'
+  name: 'Copied'
+  version: ''
+
+- regex: '(RoboForm|iFolder|Papers)/(\d+[\.\d]+) CFNetwork'
   name: '$1'
   version: '$2'
