feat(app) detect apps: Pinterest, Pic Collage, Slack feat(app) remove app: iFolder

--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -648,23 +648,7 @@
   client:
     type: mobile app
     name: RoboForm
-    version: "337.01"
-  device:
-    type: ""
-    brand: Apple
-    model: ""
-  os_family: iOS
-  browser_family: Unknown
--
-  user_agent: iFolder/9.0 CFNetwork/672.1.15 Darwin/14.0.0
-  os:
-    name: iOS
-    version: "7.1"
-    platform: ""
-  client:
-    type: mobile app
-    name: iFolder
-    version: "9.0"
+    version: ""
   device:
     type: ""
     brand: Apple
@@ -718,4 +702,52 @@
     brand: Apple
     model: ""
   os_family: Mac
+  browser_family: Unknown
+-
+  user_agent: 'Pic%20Collage/7.31.14 CFNetwork/889.9 Darwin/17.2.0'
+  os:
+    name: iOS
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Pic Collage
+    version: 7.31.14
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Pinterest for iOS/7.11 (iPhone7,2; 12.1.4)
+  os:
+    name: iOS
+    version: "7.11"
+    platform: ""
+  client:
+    type: mobile app
+    name: Pinterest
+    version: "7.11"
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 6
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Slack/396839 CFNetwork/889.9 Darwin/17.2.0
+  os:
+    name: iOS
+    version: "11.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Slack
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
   browser_family: Unknown
