--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -76,7 +76,7 @@
   version: '$1'
 
 # Pinterest
-- regex: 'Pinterest(?:/([\d\.]+))?'
+- regex: 'Pinterest(?: for iOS)?(?:/([\d\.]+))?'
   name: 'Pinterest'
   version: '$1'
 
@@ -276,16 +276,32 @@
   name: 'TikTok'
   version: ''
 
-# https://apps.apple.com/us/app/%EB%84%A4%EC%9D%B4%EB%B2%84-naver/id393499958
+# https://apps.apple.com/app/id393499958
 - regex: 'NAVER/(\d+[\.\d]+) CFNetwork'
   name: 'Naver'
   version: '$1'
 
-# https://apps.apple.com/ru/app/copied/id1026349850
+# https://apps.apple.com/app/id1026349850
 - regex: 'Copied/(\d+[\.\d]+) CFNetwork'
   name: 'Copied'
   version: ''
 
-- regex: '(RoboForm|iFolder|Papers)/(\d+[\.\d]+) CFNetwork'
-  name: '$1'
-  version: '$2'
+# https://apps.apple.com/app/id448639966
+- regex: 'Pic%20Collage/(\d+[\.\d]+) CFNetwork'
+  name: 'Pic Collage'
+  version: '$1'
+
+# https://apps.apple.com/app/id506003812
+- regex: 'Papers/(\d+[\.\d]+) CFNetwork'
+  name: 'Papers'
+  version: '$1'
+
+# https://apps.apple.com/app/id331787573
+- regex: 'RoboForm/(\d+[\.\d]+) CFNetwork'
+  name: 'RoboForm'
+  version: ''
+
+# https://apps.apple.com/app/id618783545
+- regex: 'Slack/(\d+[\.\d]+) CFNetwork'
+  name: 'Slack'
+  version: ''
