--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2237,6 +2237,11 @@
     name: 'Solomono LLC'
     url: 'https://www.linkpad.org/'
 
+- regex: 'MuscatFerret'
+  name: 'MuscatFerret'
+  category: 'Crawler'
+  url: 'http://www.webtop.com/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
