Adds detection for Quora Bot

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3978,3 +3978,13 @@
     name: MuscatFerret
     category: Crawler
     url: http://www.webtop.com/
+
+-
+  user_agent: Quora-Bot/1.0 (http://www.quora.com)
+  bot:
+    name: Quora Bot
+    category: Crawler
+    url: ""
+    producer:
+      name: Quora
+      url: https://www.quora.com/
