--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -1061,6 +1061,14 @@
     name: 'Quora'
     url: 'http://www.quora.com'
 
+- regex: 'Quora-Bot'
+  name: 'Quora Bot'
+  category: 'Crawler'
+  url: ''
+  producer:
+    name: 'Quora'
+    url: 'https://www.quora.com/'
+
 - regex: 'RamblerMail'
   name: 'RamblerMail Image Proxy'
   category: 'Crawler'
