fix: OS version detect for mobile app Pinterest

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -111,6 +111,10 @@
 ##########
 # Android
 ##########
+- regex: 'Pinterest for Android/.+; (\d(?:[\d\.]+)?)\)$'
+  name: 'Android'
+  version: '$1'
+
 - regex: 'Android; (\d+[\.\d]*); Mobile;'
   name: 'Android'
   version: '$1'
@@ -325,6 +329,14 @@
 ##########
 # iOS
 ##########
+- regex: 'Pinterest for iOS/.+; (\d(?:[\d\.]+)?)\)$'
+  name: 'iOS'
+  version: '$1'
+
+- regex: 'CFNetwork/.+ Darwin/20.2.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '14.3'
+
 - regex: 'CFNetwork/.+ Darwin/20.2.0(?!.*x86_64)'
   name: 'iOS'
   version: '14.3'
