--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -723,7 +723,7 @@
   user_agent: Pinterest for iOS/7.11 (iPhone7,2; 12.1.4)
   os:
     name: iOS
-    version: "7.11"
+    version: "12.1.4"
     platform: ""
   client:
     type: mobile app
@@ -750,4 +750,20 @@
     brand: Apple
     model: ""
   os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: Pinterest for Android/9.0.4 (K83CA; 9)
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: mobile app
+    name: Pinterest
+    version: 9.0.4
+  device:
+    type: tablet
+    brand: ZTE
+    model: Grand X View 3
+  os_family: Android
   browser_family: Unknown
