Adds detection for DeviantArt

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -271,3 +271,8 @@
   regex: 'Procast/?([\d\.]+)?'
   name: 'Procast'
   version: '$1'
+
+# DeviantArt (https://apps.apple.com/us/app/deviantart/id925219396)
+- regex: 'DeviantArt/([\d\.]+)'
+  name: 'DeviantArt'
+  version: ''
