Adds detection for Google

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -281,3 +281,9 @@
     type: mobile app
     name: DeviantArt
     version: ""
+-
+  user_agent: com.google.GoogleMobile/23.1.0 iPhone/11.4.1 hw/iPhone6_2
+  client:
+    type: mobile app
+    name: Google
+    version: 23.1.0
