--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -276,3 +276,8 @@
 - regex: 'DeviantArt/([\d\.]+)'
   name: 'DeviantArt'
   version: ''
+
+# Google (https://apps.apple.com/us/app/google/id284815942)
+- regex: 'com.google.GoogleMobile/([\d\.]+)'
+  name: 'Google'
+  version: '$1'
