Adds detection for Discord

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -281,3 +281,8 @@
 - regex: 'com.google.GoogleMobile/([\d\.]+)'
   name: 'Google'
   version: '$1'
+
+# Discord (https://apps.apple.com/us/app/discord-talk-chat-hang-out/id985746746)
+- regex: 'Discord/([\d\.]+)'
+  name: 'Discord'
+  version: ''
