--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -287,3 +287,9 @@
     type: mobile app
     name: Google
     version: 23.1.0
+-
+  user_agent: Discord/966 CFNetwork/758.5.3 Darwin/15.6.0
+  client:
+    type: mobile app
+    name: Discord
+    version: ""
