Adds detection for Covenant Eyes

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -293,3 +293,9 @@
     type: mobile app
     name: Discord
     version: ""
+-
+  user_agent: Covenant%20Eyes/5.3.8.0 CFNetwork/1121.2.2 Darwin/19.3.0
+  client:
+    type: mobile app
+    name: Covenant Eyes
+    version: 5.3.8.0
