--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -286,3 +286,8 @@
 - regex: 'Discord/([\d\.]+)'
   name: 'Discord'
   version: ''
+
+# Covenant Eyes (https://apps.apple.com/us/app/covenant-eyes/id335318146)
+- regex: 'Covenant%20Eyes/([\d\.]+)'
+  name: 'Covenant Eyes'
+  version: '$1'
