Adds detection for HP Smart

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -299,3 +299,9 @@
     type: mobile app
     name: Covenant Eyes
     version: 5.3.8.0
+-
+  user_agent: HP%20Smart/519 CFNetwork/894 Darwin/17.4.0
+  client:
+    type: mobile app
+    name: HP Smart
+    version: ""
