--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -291,3 +291,8 @@
 - regex: 'Covenant%20Eyes/([\d\.]+)'
   name: 'Covenant Eyes'
   version: '$1'
+
+# HP Smart (https://apps.apple.com/us/app/hp-smart/id469284907)
+- regex: 'HP%20Smart/([\d\.]+)'
+  name: 'HP Smart'
+  version: ''
