Adds detection for Bitsboard

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -296,3 +296,8 @@
 - regex: 'HP%20Smart/([\d\.]+)'
   name: 'HP Smart'
   version: ''
+
+# Bitsboard (https://apps.apple.com/us/app/bitsboard-flashcards-games/id516842210)
+- regex: 'Bitsboard/([\d\.]+)'
+  name: 'Bitsboard'
+  version: '$1'
