--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -767,3 +767,19 @@
     model: Grand X View 3
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_3 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 KAKAOTALK 8.6.3
+  os:
+    name: iOS
+    version: "13.3"
+    platform: ""
+  client:
+    type: mobile app
+    name: KakaoTalk
+    version: 8.6.3
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone
+  os_family: iOS
+  browser_family: Unknown
