--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -305,3 +305,8 @@
 - regex: 'Slack/(\d+[\.\d]+) CFNetwork'
   name: 'Slack'
   version: ''
+
+# https://apps.apple.com/us/app/id362057947
+- regex: 'KAKAOTALK (\d+[\.\d]+)'
+  name: 'KakaoTalk'
+  version: '$1'
