fix: YAML Lint re(2)

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -309,5 +309,4 @@
 # https://apps.apple.com/us/app/id362057947
 - regex: 'KAKAOTALK (\d+[\.\d]+)'
   name: 'KakaoTalk'
-  version: '$1
-'
+  version: '$1'
