Adds detection for BetBull

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -301,3 +301,8 @@
 - regex: 'Bitsboard/([\d\.]+)'
   name: 'Bitsboard'
   version: '$1'
+
+# BetBull (https://apps.apple.com/us/app/betbull-sport-tips-casino/id1032680895)
+- regex: 'Betbull/([\d\.]+)'
+  name: 'BetBull'
+  version: ''
