--- a/Tests/fixtures/smartphone-13.yml
+++ b/Tests/fixtures/smartphone-13.yml
@@ -4522,17 +4522,15 @@
     version: "8.0.0"
     platform: ""
   client:
-    type: browser
-    name: Chrome Webview
-    version: "71.0.3578.99"
-    engine: Blink
-    engine_version: ""
+    type: mobile app
+    name: KakaoTalk
+    version: ""
   device:
     type: smartphone
     brand: Samsung
     model: Galaxy S8
   os_family: Android
-  browser_family: Chrome
+  browser_family: Unknown
 - 
   user_agent: Mozilla/5.0 (Linux; Android 9; SC-02J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.101 Mobile Safari/537.36
   os:
