Adds detection for U-Cursos

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -317,3 +317,9 @@
     type: mobile app
     name: BetBull
     version: ""
+-
+  user_agent: U-Cursos/132 CFNetwork/811.5.4 Darwin/16.7.0
+  client:
+    type: mobile app
+    name: U-Cursos
+    version: ""
