--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -306,3 +306,8 @@
 - regex: 'Betbull/([\d\.]+)'
   name: 'BetBull'
   version: ''
+
+# U-Cursos (https://apps.apple.com/us/app/u-cursos/id834515435)
+- regex: 'U-Cursos/([\d\.]+)'
+  name: 'U-Cursos'
+  version: ''
