Improves detection for AKAI televisions

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1152,7 +1152,7 @@ Aiwa:
 
 # Akai
 Akai:
-  regex: 'Akai[ _-]|Eco[ _]E2|Glory[ _](?:G[1235]|L[123]|O[125])|TAB-[79]8[03]0Q?|X6 METAL|AKTB-703MZ'
+  regex: 'AKAI,|Akai[ _-]|Eco[ _]E2|Glory[ _](?:G[1235]|L[123]|O[125])|TAB-[79]8[03]0Q?|X6 METAL|AKTB-703MZ'
   device: 'smartphone'
   models:
     - regex: 'TAB-([79]8[03]0Q?)'
