Adds detection for Akai AK3219NF

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1171,6 +1171,10 @@ Akai:
     - regex: 'Akai[ _-]([^;/)]+)(?: Build|[;)])'
       model: '$1'
 
+    - regex: 'AKAI,(AK3219NF)'
+      device: 'tv'
+      model: '$1'
+
 # Arian
 Arian Space:
   regex: 'Arian Space'
