Adds detection for TCL U43P60

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7002,3 +7002,21 @@
     model: 55UC6306
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Zeasn/2.0 NETTV/4.5.0 Mozilla/5.0 (Linux;CE-HTML/1.0;U;en), Chrome/49.0.2623.87 Safari/537.36 AppleWebKit 537.36 (KHTML, like Gecko) Tbrowser/2.0, _TV_UNKONWN/V8-S586T02-LF1V425 (TCL,U43P60*6,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: U43P60
+  os_family: GNU/Linux
+  browser_family: Chrome
