--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11599,6 +11599,9 @@ TCL:
     - regex: 'TCL,(43S62FS)'
       device: 'tv'
       model: '$1'
+    - regex: 'U43P60\*6'
+      device: 'tv'
+      model: 'U43P60'
 
 # JVC
 JVC:
