--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7020,3 +7020,21 @@
     model: U43P60
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Opera/9.80 (Linux mips; ) Presto/2.12.407 Version/12.51 MB95/3.3.8.n (AKAI, Si2157LG32, wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: MIPS
+  client:
+    type: browser
+    name: Opera
+    version: "12.51"
+    engine: Presto
+    engine_version: 2.12.407
+  device:
+    type: tv
+    brand: Akai
+    model: Si2157LG32
+  os_family: GNU/Linux
+  browser_family: Opera
