Adds detection for AOC brand and LE32S5970-20, LE43S5970-20, U60856, LE43S5970s-20, LE32S5970s-20 models

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1996,6 +1996,14 @@ ANS:
   device: 'smartphone'
   model: 'UL40'
 
+# AOC (https://www.aoc.com/)
+AOC:
+  regex: 'AOC,'
+  device: 'tv'
+  models:
+    - regex: '(LE(?:32|43)S5970(?:s)?-20|U60856)'
+      model: '$1'
+
 # Assistant
 Assistant:
   regex: '(AS[-_](?:50[123]|543[1-6]|44[12]1|541[12]|54[23]1|6431|[46]01L)|AP-(?:109|115G|721N|753G|7[25]7G|10[68]|107G|110N|941|719))[;/)_ ]'
