--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7038,3 +7038,93 @@
     model: Si2157LG32
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.66.Driver2.33 , AOC_TV/012.002.058.001 (AOC, LE32S5970-20, wireless) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: LE32S5970-20
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.66.Driver2.33 , AOC_TV/012.002.067.001 (AOC, LE43S5970-20, wired) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: LE43S5970-20
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: 'Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.129.Driver3.34 , AOC_TV/018.002.169.001 (AOC, U60856, wireless)  CE-HTML/1.0 NETTV/4.6.0.1 SignOn/2.0 SmartTvA/5.0.0 en'
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.129
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: U60856
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.66.Driver2.33 , AOC_TV/012.002.067.001 (AOC, LE43S5970s-20, wired) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: LE43S5970s-20
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.66.Driver2.33 , AOC_TV/012.002.067.001 (AOC, LE32S5970s-20, wireless) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: LE32S5970s-20
+  os_family: GNU/Linux
+  browser_family: Opera
