Adds detection for AOC LE55U7970-30, LE43S5977-20

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2001,7 +2001,7 @@ AOC:
   regex: 'AOC,'
   device: 'tv'
   models:
-    - regex: '(LE(?:32|43)S5970(?:s)?-20|U60856)'
+    - regex: '(LE(?:32|43)S5970(?:s)?-20|LE55U7970-30|LE43S5977-20|U60856)'
       model: '$1'
 
 # Assistant
