--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7128,3 +7128,39 @@
     model: LE32S5970s-20
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.53.Driver.72 , AOC_TV/012.002.072.001 (AOC, LE55U7970-30, wireless) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.53
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: LE55U7970-30
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.66.Driver2.33 , AOC_TV/012.002.067.001 (AOC, LE43S5977-20, wireless) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: LE43S5977-20
+  os_family: GNU/Linux
+  browser_family: Opera
