Adds detection for AOC S50856, LE43S5970-20

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7164,3 +7164,39 @@
     model: LE43S5977-20
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.87 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.9.Driver.4, HbbTV/1.1.1 AOC_TV/012.002.067.001 (AOC, LE43S5970-20, wireless) CE-HTML/1.0 NETTV/4.5.0 SignOn/2.0 SmartTvA/4.0.0 en
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.9
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: LE43S5970-20
+  os_family: GNU/Linux
+  browser_family: Opera
+- 
+  user_agent: 'Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.112 Safari/537.36 OPR/36.0.2128.0 OMI/4.8.0.129.Driver3.34, HbbTV/1.1.1 AOC_TV/028.004.146.001 (AOC, S50856, wireless)  CE-HTML/1.0 NETTV/4.6.0.1 SignOn/2.0 SmartTvA/5.0.0 en'
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.8.0.129
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: AOC
+    model: S50856
+  os_family: GNU/Linux
+  browser_family: Opera
