--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -30,6 +30,14 @@ Airties:
     - regex: 'Altech UEC; ?([^);/]+)'
       model: '$1'
 
+# AOC
+AOC:
+  regex: 'AOC'
+  device: 'tv'
+  models:
+    - regex: '(LE43S5970-20|S50856)'
+      model: '$1'
+
 # BangOlufsen
 BangOlufsen:
   regex: 'Bangolufsen'
