--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13339,8 +13339,7 @@ Thomson:
     - regex: 'Delight TH201'
       device: 'smartphone'
       model: 'Delight TH201'
-
-    - regex: 'THOMSON,(55UC6306)'
+    - regex: '(55UC6306|32HD55)'
       device: 'tv'
       model: '$1'
 
