Adds detection for Thomson 40FD54

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13339,7 +13339,7 @@ Thomson:
     - regex: 'Delight TH201'
       device: 'smartphone'
       model: 'Delight TH201'
-    - regex: '(55UC6306|32HD55)'
+    - regex: '(55UC6306|32HD55|40FD54)'
       device: 'tv'
       model: '$1'
 
