--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7218,3 +7218,21 @@
     model: 32HD55
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: 'Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-N563T01-LF1V161 (THOMSON,40FD54*6,wireless)'
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Thomson
+    model: 40FD54
+  os_family: GNU/Linux
+  browser_family: Chrome
