Adds detection for TCL 55S62FS, 43P65US

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7254,3 +7254,39 @@
     model: 55UD63
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-N563T01-LF1V172 (TCL,55S62FS,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 55S62FS
+  os_family: GNU/Linux
+  browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-S586T02-LF1V300 (TCL,43P65US,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 43P65US
+  os_family: GNU/Linux
+  browser_family: Chrome
