--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11607,7 +11607,7 @@ TCL:
     - regex: '(Percee TV)(?:[);/ ]|$)'
       device: 'tv'
       model: '$1'
-    - regex: '((?:43|55)S62FS|(?:43|50)P65US|U43P60|65P4USM)'
+    - regex: '((?:43|55)S62FS|(?:43|50)P65US|U(?:43|60)P60|65P4USM)'
       device: 'tv'
       model: '$1'
 
