Adds detection for TCL 50P8S, 55S62, 55DP60, 50P6US, 43P6US

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7398,3 +7398,93 @@
     model: 55P610
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-S586T02-LF1V454 (TCL,50P8S,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 50P8S
+  os_family: GNU/Linux
+  browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-N563T01-LF1V119 (TCL,55S62,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 55S62
+  os_family: GNU/Linux
+  browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-S586T02-LF1V425 (TCL,55DP60*,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 55DP60
+  os_family: GNU/Linux
+  browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-S586T02-LF1V281 (TCL,50P6US,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 50P6US
+  os_family: GNU/Linux
+  browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-S586T05-LF1V008 (TCL,43P6US,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: TCL
+    model: 43P6US
+  os_family: GNU/Linux
+  browser_family: Chrome
