Adds detection for Thomson 49UC6306

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7506,3 +7506,21 @@
     model: 55UC63
   os_family: GNU/Linux
   browser_family: Chrome
+- 
+  user_agent: Opera/9.80 Zeasn/2.0 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i;CE-HTML/1.0;U;en), Chrome/42.0.2311.152 Safari/537.36 AppleWebKit 537.36 (KHTML, like Gecko) Tbrowser/2.0, _TV_MT5655/V8-S586T02-LF1V089 (THOMSON,49UC6306,wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Thomson
+    model: 49UC6306
+  os_family: GNU/Linux
+  browser_family: Chrome
