--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7489,7 +7489,7 @@
   os_family: GNU/Linux
   browser_family: Chrome
 - 
-  user_agent: 'Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-S586T02-LF1V130 (THOMSON,55UC63*6,wired)'
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 Tbrowser/2.0 _TV_/V8-S586T02-LF1V130 (THOMSON,55UC63*6,wired)
   os:
     name: GNU/Linux
     version: ""
@@ -7522,5 +7522,23 @@
     type: tv
     brand: Thomson
     model: 49UC6306
+  os_family: GNU/Linux
+  browser_family: Chrome
+- 
+  user_agent: Opera/9.80 NETTV/4.5.0 Mozilla/5.0 (Linux armv7i; CE-HTML/1.0; U; en) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/49.0.2623.75 Safari/537.36 NETRANGEMMH Tbrowser/2.0 _TV_NT563/V8-NT563LA-LF1V380 (Panasonic_S,43D1270,wireless)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: T-Browser
+    version: "2.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Panasonic
+    model: 43D1270
   os_family: GNU/Linux
   browser_family: Chrome
