--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11505,6 +11505,9 @@ Panasonic:
     - regex: 'PANATV[0-9]+|Viera/'
       device: 'tv'
       model: 'Smart TV'
+    - regex: '43D1270'
+      device: 'tv'
+      model: '43D1270'
     - regex: 'Panasonic[ _\-]?([a-z0-9]+)'
       model: '$1'
     - regex: 'portalmmm/2.0 (P[a-z0-9]+)'
