Adds detection for Saba televisions and Saba MB110

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -256,6 +256,14 @@ Polaroid:
   device: 'tv'
   model: ''
 
+# Saba
+Saba:
+  regex: 'Saba'
+  device: 'tv'
+  models:
+    - regex: 'MB110'
+      model: 'MB110'
+
 # Salora
 Salora:
   regex: 'Salora[;,]'
@@ -351,6 +359,7 @@ Telefunken:
   models:
     - regex: '(MB[0-9]{2})'
       model: '$1'
+
 # TCL
 TCL:
   regex: 'TCL'
