Adds detection for Atvio brand and Atvio 55D1620

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -38,6 +38,14 @@ AOC:
     - regex: '(LE43S5970-20|S50856)'
       model: '$1'
 
+# Atvio
+Atvio:
+  regex: 'ATVIO'
+  device: 'tv'
+  models:
+    - regex: '55D1620'
+      model: '55D1620'
+
 # BangOlufsen
 BangOlufsen:
   regex: 'Bangolufsen'
