--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -403,6 +403,8 @@ Toshiba:
   regex: 'Toshiba'
   device: 'tv'
   models:
+    - regex: '40L2600'
+      model: '40L2600'
     - regex: '(([0-9]{2}|DTV_)[A-Z]{2}[0-9]{1,3})'
       model: '$1'
 
