Adds detection for Thomson 40FB5426

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -405,6 +405,8 @@ Thomson:
       model: '$1 55.0"'
     - regex: '(LF1V[0-9]{3})'
       model: '$1'
+    - regex: '40FB5426'
+      model: '40FB5426'
 
 # Toshiba
 Toshiba:
