Adds detection for Laurus brand and Laurus MB130

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -176,6 +176,14 @@ JVC:
   device: 'tv'
   model: ''
 
+# Laurus
+Laurus:
+  regex: 'LAURUS'
+  device: 'tv'
+  models:
+    - regex: 'MB130'
+      model: 'MB130'
+
 # LG
 LG:
   regex: 'LGE'
