Adds detection for Fuego brand and Fuego MB211

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -96,6 +96,14 @@ Finlux:
   device: 'tv'
   model: ''
 
+# Fuego
+Fuego:
+  regex: 'FUEGO'
+  device: 'tv'
+  models:
+    - regex: 'MB211'
+      model: 'MB211'
+
 # Grundig
 Grundig:
   regex: '(OWB|Grundig|Arcelik)'
