Adds detection for GoGEN brand and GoGEN MB110

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -104,6 +104,14 @@ Fuego:
     - regex: 'MB211'
       model: 'MB211'
 
+# GoGEN (https://www.gogen.cz/)
+GoGEN:
+  regex: 'GOGEN'
+  device: 'tv'
+  models:
+    - regex: 'MB110'
+      model: 'MB110'
+
 # Grundig
 Grundig:
   regex: '(OWB|Grundig|Arcelik)'
