--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -7776,3 +7776,21 @@
     model: MB120
   os_family: GNU/Linux
   browser_family: Opera
+- 
+  user_agent: Mozilla/5.0 (Linux armv7l) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/53.0.2785.143 Safari/537.36 OPR/40.0.2207.0 OMI/4.9.0.176.DOM3.169 Model/Vestel-MB130 VSTVB MB100 HbbTV/1.2.1 (; VOX; MB130; 3.47.10.0; _TV_G10_2017;) SmartTvA/3.0.0
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.9.0.176
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: VOX
+    model: MB130
+  os_family: GNU/Linux
+  browser_family: Opera
