--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -458,14 +458,6 @@ Toshiba:
     - regex: '(([0-9]{2}|DTV_)[A-Z]{2}[0-9]{1,3})'
       model: '$1'
 
-# Vestel
-Vestel:
-  regex: 'Vestel'
-  device: 'tv'
-  models:
-    - regex: '(MB[0-9]{2})'
-      model: '$1'
-
 # Videoweb
 Videoweb:
   regex: 'videoweb|tv2n'
@@ -476,8 +468,24 @@ Videoweb:
     - regex: '(videowebtv)'
       model: 'VideoWeb TV'
 
+# VOX (https://www.voxelectronics.com/)
+VOX:
+  regex: 'VOX'
+  device: 'tv'
+  models:
+    - regex: 'MB130'
+      model: 'MB130'
+
 # X.Vision
 X.Vision:
   regex: 'X-VISION[;,]'
   device: 'tv'
   model: ''
+
+# Vestel
+Vestel:
+  regex: 'Vestel'
+  device: 'tv'
+  models:
+    - regex: '(MB[0-9]{2})'
+      model: '$1'
